--- a/html/to-do.html
+++ b/html/to-do.html
@@ -20,8 +20,7 @@ If you find this useful, please consider <a href="https://paypal.me/sauvikbiswas
 <div class="header">02: Unsorted to-do list</div>
 <div class="content">
 <ul>
-<li>Closures</li>
-<li>Generator functions&mdash;pipelines and co-routine.</li>
+<li>Generator functions&mdash;~~pipelines~~ and co-routine.</li>
 <li>List and generator comprehension.</li>
 <li>Classes from scratch using type.</li>
 <li>Inheritance and MRO computation.</li>
